--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-wordcloud": "^1.2.7",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
