--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "antd": "^5.13.3",
     "firebase": "^10.7.2",
+    "fireworks-js": "^2.10.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
